<resources>
    <string name="app_name">Service Provider</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_number">Mobile Phone</string>
    <string name="acceptncontinue"><![CDATA[Accept & Continue]]></string>
    <string name="hint_terms"><![CDATA[By using this application, you agree to the]]></string>
    <string name="hint_terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="hint_and">\u0020and\u0020</string>
    <string name="hint_privacy_policy">Privacy Policy</string>
    <string name="hint_email_optional">Email (Optional)</string>
    <string name="hint_number_sample">Mobile Phone (03xx-xxxxxxx)</string>
    <string name="str_response_message">There is an Error from Server</string>
    <string name="hint_security_code">Please enter security code\n sent to your phone no.</string>
    <string name="error_not_received">Did not receive?</string>
    <string name="hint_click_here"><u>Click here</u></string>
    <string name="hint_send_again">\u0020to send again</string>
    <string name="hint_confirm">CONFIRM</string>
    <string name="hint_clear">CLEAR</string>
    <string name="hint_alert_successful_authentication">Your Authentication is Successful to Bahtreen!</string>
    <string name="hint_alert_fail_authentication">Enter valid Pin code please!</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hint_schedule">SCHEDULE</string>
    <string name="hint_post_job">POST JOB</string>
    <string name="hint_spinner_current_location">Current Location</string>
    <string name="hint_address_name">Location (e.g Office/Home)</string>
    <string name="hint_address_search">search</string>
    <string name="hint_save">SAVE</string>
    <string name="hint_cancel">CANCEL</string>
    <string name="hint_login">Login</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_user_name_sample">sp-ibrahim</string>
    <string name="hint_online">Online</string>

    <string name="msg_drawer_open">Navigation Drawer Opens</string>
    <string name="msg_drawer_closed">Navigation Drawer Closed</string>
    <string name="menu_post_job">Post Job</string>
    <string name="menu_active_jobs">Active Jobs</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_jobs_history">Jobs History</string>
    <string name="menu_help">Help</string>
    <string name="menu_legal">Legal</string>
    <string name="menu_my_location">My Location</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_logout">Logout</string>
    <string name="hint_offline">Offline</string>
    <string name="hint_job_id">Job ID #</string>
    <string name="title_date_time">Date/Time</string>
    <string name="hint_date">27 Dec 11:49 AM</string>
    <string name="title_job_type">Job Type</string>
    <string name="title_address">Address</string>
    <string name="title_additional_visiting_charges">Additional Visiting Charges</string>
    <string name="title_status">Status</string>
    <string name="hint_job_directions">DIRECTIONS</string>
    <string name="hint_job_support">SUPPORT</string>
    <string name="hint_job_complete">COMPLETE</string>
    <string name="hint_new_job_request">New Service Request</string>
    <string name="hint_accept_job">Accept</string>
    <string name="hint_reject">REJECT</string>
    <string name="hint_confirmed">CONFIRMED</string>
    <string name="hint_job_confirmed">Job Confirmed by User!</string>
    <string name="hint_ok">OK</string>
    <string name="hint_services_booked">Your Services are booked against</string>
    <string name="hint_canceled">CANCELED</string>
    <string name="hint_job_canceled">Job Canceled by User!</string>
    <string name="hint_select_sp">Select Member</string>
    <string name="hint_reg_no">Reg No:\u0020</string>
    <string name="hint_reg_no_sample">SP-F6-LHR-19</string>
    <string name="hint_name_sample">Ibrahim Ghani</string>
    <string name="hint_mobile">Mobile:</string>
    <string name="hint_mobile_sample">923007493475</string>
    <string name="hint_address">Address:</string>
    <string name="hint_address_sample">Pindi Stop, Kot Lakhpat</string>
    <string name="hint_experience">Experience:</string>
    <string name="hint_experience_sample">2 Years</string>
    <string name="hint_job_balance">JOB BALANCE</string>
    <string name="hint_job_balance_sample">0</string>
    <string name="hint_recharge_account">RECHARGE ACCOUNT</string>
    <string name="hint_no_active_job">You do not have any active job(s) at this time.</string>
    <string name="hint_no_job_history">You do not have any Job history at this time.</string>
    <string name="hint_job_confirm_arrival">Confirm Arrival</string>
</resources>
