<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/imageview_profile_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_name_sample"
                android:textSize="@dimen/profile_textview_size"
                android:textColor="@color/quantum_black_100"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_reg_no"
                    android:textSize="@dimen/profile_textview_size"
                    android:textColor="@color/quantum_black_100"/>
                <TextView
                    android:id="@+id/textview_profile_reg_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/hint_reg_no_sample"
                    android:textSize="@dimen/profile_textview_size"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_user_name"
            android:textSize="@dimen/profile_textview_size"
            android:textColor="@color/quantum_black_100" />

        <TextView
            android:id="@+id/textview_profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/hint_user_name_sample"
            android:textSize="@dimen/profile_textview_size"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_mobile"
            android:textSize="@dimen/profile_textview_size"
            android:textColor="@color/quantum_black_100"/>
        <TextView
            android:id="@+id/textview_profile_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/hint_mobile_sample"
            android:textSize="@dimen/profile_textview_size"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_address"
            android:textSize="@dimen/profile_textview_size"
            android:textColor="@color/quantum_black_100"/>
        <TextView
            android:id="@+id/textview_profile_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/hint_address_sample"
            android:textSize="@dimen/profile_textview_size"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/hint_experience"
        android:textSize="@dimen/profile_textview_size"
        android:textColor="@color/quantum_black_100"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_profile_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearlayout_profile_terms_condtions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:gravity="center"
            android:text="@string/hint_terms_condition"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:contentDescription="Right Arrow"
            android:src="@drawable/ic_list_right_arrow" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_black_divider"/>

</LinearLayout>