<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/material_red_A200">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_job_balance"
            android:textSize="@dimen/job_balance_textview_size"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/textview_job_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_job_balance_sample"
            android:textSize="@dimen/job_balance_textview_size"
            android:textColor="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_recharge_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/hint_recharge_account"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</LinearLayout>