<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_app"
    android:fillViewport="true"
    tools:context=".view.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:src="@drawable/splash_logo_inverse" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_response_message"
                android:textColor="@color/material_red_500"
                android:gravity="center"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/edittext_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/backgroundEditTextLogin"
                android:hint="@string/hint_user_name"
                android:text="sp-ibrahim"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/backgroundEditTextLogin"
                android:hint="@string/hint_password"
                android:text="123456"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/hint_login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>